--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import "./styles/material";
+
 html, body {
-  margin: 0;
   height: 100%;
+  color: white;
+  font-family: 'Roboto', 'Helvetica', monospace;
 }
