--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -2,8 +2,5 @@
   display: flex;
   width: 100%;
   align-items: flex-end;
-}
-
-.header {
-  background: transparent;
+  justify-content: space-between;
 }
