--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -9,30 +9,12 @@
 </nav>
 
 <div class="toolbar">
-  <button mat-stroked-button [matMenuTriggerFor]="channelsSort">
-    Сортировка
-  </button>
-  <button mat-stroked-button [matMenuTriggerFor]="channelsGenres" class="toolbar__button">
-    Телеканалы
-  </button>
+  <app-fancy-select [options]="channelsSortOptions" class="toolbar__select">
+    <span #label>Сортировка</span>
+  </app-fancy-select>
+
+  <app-fancy-select [options]="genreOptions$ | async" class="toolbar__select">
+    <span #label>Телеканалы</span>
+  </app-fancy-select>
 </div>
-
-<mat-menu #channelsSort="matMenu">
-  <button mat-menu-item>По умолчанию</button>
-  <button mat-menu-item>По возрастанию (А-Я)</button>
-  <button mat-menu-item>По убыванию (Я-А)</button>
-</mat-menu>
-
-<mat-menu #channelsGenres="matMenu" class="genres__menu" [overlapTrigger]="false">
-  <div class="list-wrapper">
-    <mat-nav-list>
-      <mat-list-item>Все телеканалы</mat-list-item>
-      <mat-list-item *ngFor="let genre of (genres$ | async); trackBy: trackByFn">
-        {{ genre.genreName }}
-      </mat-list-item>
-    </mat-nav-list>
-  </div>
-  <button mat-menu-item>Сбросить выбор</button>
-</mat-menu>
-
 
