--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -4,3 +4,13 @@
   align-items: flex-end;
   justify-content: space-between;
 }
+
+.toolbar {
+  height: 49px;
+  display: flex;
+  align-items: flex-end;
+
+  &__select:first-child {
+    margin-right: 15px;
+  }
+}
