--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
+<div class="container">
+  <app-header></app-header>
+  <main class="page">
+    <router-outlet></router-outlet>
+  </main>
+</div>
 
-<app-header></app-header>
-<main class="page">
-  <router-outlet></router-outlet>
-</main>
 
 
