--- a/src/app/shared/components/fancy-select/fancy-select.component.scss
+++ b/src/app/shared/components/fancy-select/fancy-select.component.scss
@@ -1,21 +1,57 @@
 :host {
   display: flex;
 }
-.fancy__button {
-  width: 150px;
+.fancy__trigger {
+  width: 198px;
 }
 
-.fancy__menu {
+.mat-menu-item.fancy__button {
+  background-color: rgb(38, 51, 67);
+  transition: background-color .1s ease;
+  color: #a6bcd0;
+  display: flex;
+  justify-content: center;
+  font-size: 16px;
+
+  &:hover {
+    background-color: rgba(38, 51, 66, 0.9);
+  }
+}
+
+.mat-list-item.fancy__selection-list-item {
+  .mat-pseudo-checkbox {
+    border: none;
+    transition: border-color 0s;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0.3;
+
+    &.mat-pseudo-checkbox-checked {
+      &:after {
+        width: 0;
+        height: 0;
+        border-left: 0;
+      }
+    }
+  }
+
+  .mat-list-text {
+    z-index: 1;
+  }
+}
+
+.mat-menu-panel.fancy__menu {
   max-height: calc(240px - 48px);
 
   > .mat-menu-content {
-    > .list-wrapper {
+    > &__list-wrapper {
       overflow: hidden;
     }
   }
 
   > .mat-menu-content:not(:empty),
-  .mat-nav-list {
+  .mat-selection-list {
     padding: 0;
   }
 
@@ -23,7 +59,7 @@
     position: relative;
   }
 
-  .mat-nav-list {
+  .mat-selection-list {
     max-height: calc(192px - 48px);
     overflow: auto;
   }
