add channels toolbar state

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
-<div class="container">
+<header class="page__header">
   <app-header></app-header>
-  <main class="page">
-    <router-outlet></router-outlet>
-  </main>
-</div>
-
+</header>
+<main class="page__container">
+  <router-outlet></router-outlet>
+</main>
 
 
