--- a/src/app/pages/channels/channels.component.html
+++ b/src/app/pages/channels/channels.component.html
@@ -1,4 +1,4 @@
 <section class="channels__list">
-  <!-- <app-channel-card *ngFor="let channel of (channels$ | async)" [channel]="channel">
-  </app-channel-card> -->
+  <app-channel-card *ngFor="let channel of (visibleChannels$ | async)" [channel]="channel">
+  </app-channel-card>
 </section>
