--- a/src/app/pages/channels/components/channel-card/channel-card.component.html
+++ b/src/app/pages/channels/components/channel-card/channel-card.component.html
@@ -1,3 +1,3 @@
-<p>
-  channel-card works!
-</p>
+<mat-card class="channel-card">
+  <img mat-card-image [src]="channel?.picture?.backgrounds[0]">
+</mat-card>
